--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,20 @@
         "laravel"
     ],
     "license": "MIT",
-    "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
-    },
-    "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
-    },
+
+  "require": {
+    "php": "^7.4|^8.0",
+    "fideloper/proxy": "^4.0",
+    "laravel/framework": "^8.0",
+    "laravel/tinker": "^2.0"
+},
+"require-dev": {
+    "facade/ignition": "^2.0",
+    "nunomaduro/collision": "^5.0",
+    "mockery/mockery": "^1.0",
+    "phpunit/phpunit": "^9.0"
+}
+,
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
